# runi-cv-hw

./: .gitignore  pyproject.toml
.github/prompts/: plan-hw2.prompt.md
a1/: hw1_204541585.ipynb
hw1/: pyproject.toml  view6_crop.tif
hw2/: hw2_ID_ID.ipynb
hw2/.github/prompts/: plan-cvHw2ProjectSetup.prompt.md
hw2/tmp/: section_A.py  section_A_final.py
